fix: Prevent toolbar button text from wrapping

--- a/src/css/_toolbar-button.scss
+++ b/src/css/_toolbar-button.scss
@@ -28,6 +28,7 @@
     line-height: 16px;
     height: 16px;
     padding: 0 4px;
+    white-space: nowrap;
   }
 
   .dropdown-arrow {
